# games

./: .gitignore  README.md  STREAMLIT_BASELINE_CONFIGS.md  baseline_configs.py  blotto.py  differentiable_lotto.py  differentiable_lotto_vis.py  disc_game.py  pyproject.toml  requirements.txt  run.py  run_blotto_paper_comparison.py  run_streamlit.sh  update_metadata_from_folders.py
src/: test_gemini.py
src/games/: __init__.py  egs.py  egs_test.py  game.py  utils.py
src/games/blotto/: __init__.py  blotto.py  blotto_vis.py  differentiable_lotto.py  differentiable_lotto_vis.py
src/games/differentiable_lotto/: __init__.py  differentiable_lotto.py  differentiable_lotto_vis.py
src/games/disc/: __init__.py  disc_game.py  disc_game_vis.py
src/games/llms/: config_llm.py  llm2.py  llm_competition.py  multiturn_rps.py
src/games/penneys/: __init__.py  penneys.py  penneys_vis.py
streamlit/: __init__.py  app.py  game_runners.py  llm_competition_ui.py  utils.py
